# Continuous-Modeling

./: .gitignore  README.md  benchmark_results.txt  compare_approaches.py  main_test.py  pyproject.toml
dhff/acquisition/: __init__.py  classifier.py  functions.py  planner.py
dhff/cad/: __init__.py  feature_extractor.py  primitives.py
dhff/core/: __init__.py  complex_rcs.py  coordinate_system.py  types.py
dhff/discrepancy_prior/: __init__.py  ensemble_solver.py  geometric_features.py  susceptibility_map.py
dhff/io/: __init__.py  csv_loader.py
dhff/models/: __init__.py  base.py  fused_model.py  hybrid_model.py  pure_gp.py  residual_gp.py  rff_approximation.py
dhff/pipeline/: __init__.py  engine.py
dhff/scattering_center/: __init__.py  anomaly.py  associator.py  extractor.py  extractor_config.py  parametric_model.py
dhff/synthetic/: __init__.py  measurement.py  scatterer.py  scenarios.py  simulator.py
dhff/tensor_analysis/: __init__.py  _utils.py  cancellation_detector.py  cross_freq_coherence.py  gradient_analyzer.py  isar_analyzer.py  measurement_planner.py  physical_consistency_analyzer.py  regime_classifier.py  spectral_analyzer.py  tensor_sensitivity_map.py  test_scenarios.py  validation.py
dhff/visualization/: plots.py
tests/: conftest.py  test_acquisition.py  test_cad.py  test_core.py  test_discrepancy_prior.py  test_models.py  test_pipeline.py  test_robustness.py  test_scattering_center.py  test_synthetic.py  test_tensor_analysis.py  test_visualization.py
