[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhff"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "gpytorch>=1.11",
    "torch>=2.0",
    "matplotlib>=3.7",
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = ["pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dhff*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
